--- a/package.json
+++ b/package.json
@@ -14,6 +14,10 @@
     "nuxt": "^3.6.2"
   },
   "dependencies": {
+    "@fortawesome/fontawesome-svg-core": "^6.4.0",
+    "@fortawesome/free-brands-svg-icons": "^6.4.0",
+    "@fortawesome/free-solid-svg-icons": "^6.4.0",
+    "@fortawesome/vue-fontawesome": "^3.0.3",
     "@mdi/font": "^7.2.96",
     "@nuxtjs/google-fonts": "^3.0.1",
     "sass": "^1.63.6",
